Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3161

LASSERT() in lod_initialize_objects()

XMLWordPrintable

    • 3
    • 7698

      Looking at the code in lod_initialize_objects() I found the following comment and code:

                      /*
                       * XXX: assertion is left for testing, to make
                       * sure we never process requests till configuration
                       * is completed. to be changed to -EINVAL
                       */
      
                      lod_getref(&md->lod_ost_descs);
                      LASSERT(cfs_bitmap_check(md->lod_ost_bitmap, idx));
                      LASSERT(OST_TGT(md,idx));
                      LASSERTF(OST_TGT(md,idx)->ltd_ost, "idx %d\n", idx);
      

      This should be replaced by proper error handling, in case of LOV EA corruption on disk, or OST removal.

            bobijam Zhenyu Xu
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: