LU-3161 lod: Added proper error handling instead of LASSERT

LASSERT are replaced with proper error handling in
lod_initialize_objects.

Signed-off-by: Gaurav Mahajan <gmahajan@ddn.com>
Change-Id: Ia8fbbb4956765835bf46b46b3a7addc99cb191fa
Reviewed-on: http://review.whamcloud.com/7234
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>